# bitcoin-hacking-tools

./: README.md
double-spender/: index.html
double-spender/css/: styles.css
double-spender/js/: crypto-min.js  crypto-sha256.js  doublespend.js
private-key-harvesters/brainflayer/: README.md
private-key-harvesters/bruteforce-wallet/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
private-key-harvesters/bruteforce-wallet/contrib/gentoo/app-crypt/bruteforce-wallet/: bruteforce-wallet-1.1.ebuild  bruteforce-wallet-1.4.1.ebuild
private-key-harvesters/bruteforce-wallet/src/: bruteforce-wallet.c  elliptic-curve.c  elliptic-curve.h  version.h
private-key-harvesters/ecdsa-private-key-recovery/: README.md  setup.py
private-key-harvesters/ecdsa-private-key-recovery/ecdsa_key_recovery/: __init__.py
private-key-harvesters/ecdsa-private-key-recovery/tests/: test_ecdsa_key_recovery.py
private-key-harvesters/ecdsa-private-key-recovery/tools/: README.md
private-key-harvesters/ecdsa-private-key-recovery/tools/bitcoin/: bitcrack.py
private-key-harvesters/electrum-cracker-master/: README.md  electrum-cracker.py
private-key-harvesters/large-bitcoin-collider-pool/: LBC.sh  info.txt
private-key-harvesters/wallet-collision/: README.md
private-key-harvesters/wallet-collision/bitcoin/: test.py  wallet.py
private-key-harvesters/wallet-collision/bitcoin/weak/: dict.txt  test.py  weak.py
private-key-harvesters/wallet-collision/ethereum/: test.py  wallet.py
private-key-harvesters/wallet-collision/ethereum/weak/: dict.txt  test.py  (+1 more)
